--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,7 +8,7 @@
     android:background="@color/white">
 
     <LinearLayout
-        android:id="@+id/playlistLayout"
+        android:id="@+id/layoutTitle"
         android:layout_width="300dp"
         android:layout_height="80dp"
         android:layout_alignParentStart="true"
@@ -16,8 +16,7 @@
         android:layout_marginStart="30dp"
         android:layout_marginTop="18dp"
         android:orientation="vertical"
-        android:padding="18dp"
-        app:layout_constraintStart_toStartOf="parent">
+        android:padding="18dp">
 
         <TextView
             android:layout_width="wrap_content"
@@ -45,12 +44,11 @@
     <!-- Playlist Button / Queue -->
 
     <FrameLayout
-        android:id="@+id/layoutExpandPlaylist"
         android:layout_width="80dp"
         android:layout_height="80dp"
-        android:layout_alignBottom="@+id/playlistLayout"
+        android:layout_alignBottom="@+id/layoutTitle"
         android:layout_alignParentEnd="true"
-        android:layout_toEndOf="@+id/playlistLayout"
+        android:layout_toEndOf="@+id/layoutTitle"
         android:layout_weight="1">
 
         <View
@@ -82,5 +80,16 @@
         android:divider="@color/white"
         android:dividerHeight="1dp"
         android:padding="3dp" />
+
+    <com.google.android.material.bottomnavigation.BottomNavigationView
+        android:id="@+id/bottomNavBar"
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:layout_alignParentBottom="true"
+        android:background="@color/white"
+        app:itemIconTint="@drawable/bottom_nav_icon_color_selector"
+        app:itemTextColor="@drawable/bottom_nav_icon_color_selector"
+        app:labelVisibilityMode="unlabeled"
+        app:menu="@menu/menu" />
 
 </RelativeLayout>
