--- a/app/src/main/res/layout/activity_songplayer.xml
+++ b/app/src/main/res/layout/activity_songplayer.xml
@@ -66,6 +66,7 @@
             android:layout_weight="1"
             android:layout_marginStart="6dp">
             <View
+                android:id="@+id/outlinePlayPause"
                 android:layout_width="35dp"
                 android:layout_height="35dp"
                 android:layout_gravity="center_vertical"
@@ -76,7 +77,7 @@
                 android:layout_width="35dp"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_vertical"
-                android:src="@drawable/ic_play"
+                android:src="@drawable/ic_pause"
                 app:tint="@color/gray"
                 android:contentDescription="@string/app_name"
                 />
@@ -113,7 +114,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:fontFamily="@font/open_sans"
-            android:text="PLAYLIST"
+            android:text="NEXT SONG"
             android:textColor="@color/light_gray"
             android:letterSpacing="0.2"
             android:textSize="11sp"
