--- a/app/src/main/res/layout/activity_songplayer.xml
+++ b/app/src/main/res/layout/activity_songplayer.xml
@@ -18,7 +18,8 @@
         android:layout_marginStart="5dp"
         android:layout_marginTop="5dp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        android:contentDescription="@string/app_name"/>
 
     <!-- Song Picture -->
     <com.makeramen.roundedimageview.RoundedImageView
@@ -114,7 +115,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:fontFamily="@font/open_sans"
-            android:text="NEXT SONG"
+            android:text="@string/next_song"
             android:textColor="@color/light_gray"
             android:letterSpacing="0.2"
             android:textSize="11sp"
@@ -212,15 +213,15 @@
         app:layout_constraintTop_toBottomOf="@id/layoutFunction">
 
         <TextView
-            android:id="@+id/songArtist"
+            android:id="@+id/nowPlaying"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginBottom="5dp"
             android:fontFamily="@font/open_sans_bold"
-            android:text="K(N)oW NAME"
+            android:text="@string/now_playing"
+            android:letterSpacing="0.2"
             android:textColor="@color/light_gray"
-            android:textSize="13sp"
-            android:textStyle="bold" />
+            android:textSize="13sp"/>
 
         <TextView
             android:id="@+id/songName"
