--- a/app/src/main/res/layout/activity_songplayer.xml
+++ b/app/src/main/res/layout/activity_songplayer.xml
@@ -22,18 +22,53 @@
         android:contentDescription="@string/app_name"/>
 
     <!-- Song Picture -->
+
     <com.makeramen.roundedimageview.RoundedImageView
         android:id="@+id/imgCover"
         android:layout_width="300dp"
         android:layout_height="400dp"
+        android:src="@drawable/bg_vinyl"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:riv_corner_radius_bottom_left="100dp"
         app:riv_corner_radius_bottom_right="100dp"
-        android:src="@drawable/img_cover"
         />
 
+    <de.hdodenhof.circleimageview.CircleImageView
+        android:id="@+id/vinyl"
+        android:layout_width="250dp"
+        android:layout_height="250dp"
+        android:src="@drawable/img_cover"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        android:layout_marginTop="60dp"
+        android:elevation="4dp"
+        />
+
+    <de.hdodenhof.circleimageview.CircleImageView
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:layout_marginTop="160dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        android:translationZ="4dp"
+        android:src="@drawable/bg_vinyl"
+        />
+
+    <ImageView
+        android:layout_width="wrap_content"
+        android:layout_height="190dp"
+        android:src="@drawable/vinyl_pen"
+        android:elevation="8dp"
+        android:layout_marginTop="25dp"
+        android:layout_marginLeft="195dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        />
 
     <!-- Music control (forward, back, play, pause) -->
     <LinearLayout
@@ -182,7 +217,6 @@
             android:layout_height="18dp"
             android:layout_gravity="center"
             android:src="@drawable/ic_loop"
-            app:tint="@color/light_gray"
             android:contentDescription="@string/app_name"
             />
 
