--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,5 +8,6 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="gray">#555251</color>
+    <color name="tosca">#40E0D0</color>
     <color name="light_gray">#b4b4b4</color>
 </resources>
